# RRStream

./: .gitignore  README.md  docker-compose.yaml
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
consumer/src/processes/: mod.rs  processmsg.rs
producer/: go.mod  go.sum  main.go
producer/producer/: producer.go
producer/utils/: utils.go
