[package]
name = "RRconsumer"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
rabbitmq-stream-client = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tracing = "*"
tracing-subscriber = "*"
anyhow = "*"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15.0"
